remove Operator
